VPC/public_subnet.tf
resource "aws_subnet" "pb-subnet" {
  vpc_id = aws_vpc.vpc.id
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone = "us-east-1a"
  tags = {
    Name = "pb-subnet"
  }
}
